tests/suite/snapshots/suite__check__tests__check__bad-return5.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-return5.xi:7:9]
   │
 7 │         return 1
   ·         ────┬───  
   ·             ╰───── Return mismatch
───╯

